--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.scss"
+              "src/styles.scss",
+               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"
           ]
