--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
+    "@angular/animations": "^16.2.4",
     "@angular/cdk": "^16.2.3",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "bootstrap": "^5.3.1",
     "nodemon": "^3.0.1",
     "rxjs": "~7.8.0",
